LU-2213 tests: mds_backup_restore to set label

Reset the label on a restored ldiskfs MDT so that it doesn't look
virgin for mount.lustre and try to re-register at the same index.

Move the LASSERT() in osd_scrub_cleanup() checking that there is no
lfsck running until after the lfsck is stopped.

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: I97625d54766122314630aff0069d9e14d23b9840